[gd_scene load_steps=10 format=3 uid="uid://dhm6w4eqc8l6t"]

[ext_resource type="Script" path="res://scenes/objects/collisionObjects/collision_object.gd" id="1_5kn5v"]
[ext_resource type="Texture2D" uid="uid://c7vuxscm3j5rx" path="res://assets/sprites/steelTexture.webp" id="2_e0x5f"]
[ext_resource type="AudioStream" uid="uid://cd7wg2c5paibq" path="res://assets/audio/8bitEffects/bounce.mp3" id="3_iad4h"]
[ext_resource type="AudioStream" uid="uid://fis17daar526" path="res://assets/audio/8bitEffects/gainMoney.mp3" id="4_8b76u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d386m"]
radius = 8.0

[sub_resource type="Animation" id="Animation_jfv6c"]
resource_name = "offHover"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HoverBox:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_u0cwi"]
resource_name = "onHover"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HoverBox:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ugl75"]
_data = {
"offHover": SubResource("Animation_jfv6c"),
"onHover": SubResource("Animation_u0cwi")
}

[sub_resource type="LabelSettings" id="LabelSettings_735bh"]
font_size = 128

[node name="collisionObject" type="StaticBody2D" groups=["coll_objects"]]
script = ExtResource("1_5kn5v")

[node name="HoverArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoverArea"]
shape = SubResource("CircleShape2D_d386m")

[node name="Animate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ugl75")
}

[node name="HoverBox" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 1
position = Vector2(9.53674e-07, -16)
scale = Vector2(0.0829015, 0.0888889)
texture = ExtResource("2_e0x5f")

[node name="HoverText" type="Label" parent="HoverBox"]
offset_left = -289.5
offset_top = -180.0
offset_right = 289.5
offset_bottom = 180.0
text = "blank"
label_settings = SubResource("LabelSettings_735bh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="boingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_iad4h")
volume_db = -13.46

[node name="moneySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8b76u")
volume_db = -6.559

[connection signal="mouse_entered" from="HoverArea" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HoverArea" to="." method="_on_mouse_exited"]
